added layout and logo

--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,26 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+        <link rel="icon" sizes="180x180" href="/favicon-180.png" />
+        <link rel="apple-touch-icon" href="/favicon-152.png" />
+
+        <!-- Twitter Card data -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:site" content="https://www.luchafotos.com" />
+        <meta name="twitter:title" content="Lucha Fotos" />
+
+        <!-- Open Graph data -->
+        <meta property="og:title" content="Lucha Fotos" />
+        <meta property="og:type" content="article" />
+        <meta property="og:site_name" content="Lucha Fotos" />
+        <meta property="og:url" content="https://www.luchafotos.com" />
+
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body class="bg-brand-dark text-white" data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
